// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab /> ref should work 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  min-width: 100px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  outline: none;
  border: 2px solid transparent;
  cursor: pointer;
  color: #282828;
  back-ground-color: transparent;
}

.c1:focus {
  border: 2px dotted;
  border-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="vertical"] {
  color: #00478A;
  border-right: 2px solid;
  border-right-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="horizontal"] {
  color: #00478A;
  border-bottom: 2px solid;
  border-bottom-color: #00478A;
}

.c1:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<button
  aria-selected="true"
  class="poodle-box c0 poodle-tab c1 c2"
  data-orientation="horizontal"
  id="poodle-tab-1"
  role="tab"
  tabindex="0"
>
  Tab
</button>
`;

exports[`<Tab /> should render Box props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  min-width: 100px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  outline: none;
  border: 2px solid transparent;
  cursor: pointer;
  color: #282828;
  back-ground-color: transparent;
}

.c1:focus {
  border: 2px dotted;
  border-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="vertical"] {
  color: #00478A;
  border-right: 2px solid;
  border-right-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="horizontal"] {
  color: #00478A;
  border-bottom: 2px solid;
  border-bottom-color: #00478A;
}

.c1:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

.c2 {
  margin-top: 20px;
}

<button
  aria-selected="true"
  class="poodle-box c0 poodle-tab c1 c2"
  data-orientation="horizontal"
  id="id"
  role="tab"
  tabindex="0"
>
  Tab
</button>
`;

exports[`<Tab /> should render Tab correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  min-width: 100px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  outline: none;
  border: 2px solid transparent;
  cursor: pointer;
  color: #282828;
  back-ground-color: transparent;
}

.c1:focus {
  border: 2px dotted;
  border-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="vertical"] {
  color: #00478A;
  border-right: 2px solid;
  border-right-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="horizontal"] {
  color: #00478A;
  border-bottom: 2px solid;
  border-bottom-color: #00478A;
}

.c1:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<button
  aria-selected="true"
  class="poodle-box c0 poodle-tab c1 c2"
  data-orientation="horizontal"
  id="poodle-tab-1"
  role="tab"
  tabindex="0"
>
  Tab
</button>
`;

exports[`<Tab /> should render Tab correctly 2`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  min-width: 100px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  outline: none;
  border: 2px solid transparent;
  cursor: pointer;
  color: #282828;
  back-ground-color: transparent;
}

.c1:focus {
  border: 2px dotted;
  border-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="vertical"] {
  color: #00478A;
  border-right: 2px solid;
  border-right-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="horizontal"] {
  color: #00478A;
  border-bottom: 2px solid;
  border-bottom-color: #00478A;
}

.c1:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<button
  aria-selected="true"
  class="poodle-box c0 poodle-tab c1 c2"
  data-orientation="vertical"
  id="poodle-tab-1"
  role="tab"
  tabindex="0"
>
  Tab
</button>
`;

exports[`<Tab /> should render Tab selected correctly 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
}

.c1 {
  min-width: 100px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  outline: none;
  border: 2px solid transparent;
  cursor: pointer;
  color: #282828;
  back-ground-color: transparent;
}

.c1:focus {
  border: 2px dotted;
  border-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="vertical"] {
  color: #00478A;
  border-right: 2px solid;
  border-right-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="horizontal"] {
  color: #00478A;
  border-bottom: 2px solid;
  border-bottom-color: #00478A;
}

.c1:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<button
    aria-selected="false"
    class="poodle-box c0 poodle-tab c1 c2"
    data-orientation="horizontal"
    id="poodle-tab-1"
    role="tab"
    tabindex="-1"
  >
    Tab
  </button>,
  .c0 {
  box-sizing: border-box;
}

.c1 {
  min-width: 100px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  outline: none;
  border: 2px solid transparent;
  cursor: pointer;
  color: #282828;
  back-ground-color: transparent;
}

.c1:focus {
  border: 2px dotted;
  border-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="vertical"] {
  color: #00478A;
  border-right: 2px solid;
  border-right-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="horizontal"] {
  color: #00478A;
  border-bottom: 2px solid;
  border-bottom-color: #00478A;
}

.c1:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<button
    aria-selected="true"
    class="poodle-box c0 poodle-tab c1 c2"
    data-orientation="horizontal"
    id="poodle-tab-2"
    role="tab"
    tabindex="0"
  >
    Tab2
  </button>,
]
`;

exports[`<Tab /> theming should disable classes 1`] = `
.c0 {
  box-sizing: border-box;
}

<button
  aria-selected="true"
  class="poodle-box c0 poodle-tab c1"
  data-orientation="horizontal"
  id="poodle-tab-1"
  role="tab"
  tabindex="0"
>
  Tab
</button>
`;

exports[`<Tab /> theming should extend styles in global 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  min-width: 100px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  outline: none;
  border: 2px solid transparent;
  cursor: pointer;
  color: #282828;
  back-ground-color: transparent;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

.c1:focus {
  border: 2px dotted;
  border-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="vertical"] {
  color: #00478A;
  border-right: 2px solid;
  border-right-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="horizontal"] {
  color: #00478A;
  border-bottom: 2px solid;
  border-bottom-color: #00478A;
}

.c1:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<button
  aria-selected="true"
  class="poodle-box c0 poodle-tab c1 c2"
  data-orientation="horizontal"
  id="poodle-tab-1"
  role="tab"
  tabindex="0"
>
  Tab
</button>
`;

exports[`<Tab /> theming should extend styles in local 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  min-width: 100px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  outline: none;
  border: 2px solid transparent;
  cursor: pointer;
  color: #282828;
  back-ground-color: transparent;
  margin-top: 10px;
  letter-spacing: 250px;
}

.c1:focus {
  border: 2px dotted;
  border-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="vertical"] {
  color: #00478A;
  border-right: 2px solid;
  border-right-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="horizontal"] {
  color: #00478A;
  border-bottom: 2px solid;
  border-bottom-color: #00478A;
}

.c1:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<button
  aria-selected="true"
  class="poodle-box c0 poodle-tab c1 c2"
  data-orientation="horizontal"
  id="poodle-tab-1"
  role="tab"
  tabindex="0"
>
  Tab
</button>
`;

exports[`<Tab /> theming should override classes 1`] = `
.c0 {
  box-sizing: border-box;
}

<button
  aria-selected="true"
  class="poodle-box c0 poodle-tab morning c1"
  data-orientation="horizontal"
  id="poodle-tab-1"
  role="tab"
  tabindex="0"
>
  Tab
</button>
`;

exports[`<Tab /> theming should override styles 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  margin-top: 50px;
}

<button
  aria-selected="true"
  class="poodle-box c0 poodle-tab c1 c2"
  data-orientation="horizontal"
  id="poodle-tab-1"
  role="tab"
  tabindex="0"
>
  Tab
</button>
`;

exports[`<Tab /> theming should render with default props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  min-width: 100px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  outline: none;
  border: 2px solid transparent;
  cursor: pointer;
  color: #282828;
  back-ground-color: transparent;
}

.c1:focus {
  border: 2px dotted;
  border-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="vertical"] {
  color: #00478A;
  border-right: 2px solid;
  border-right-color: #00478A;
}

.c1[aria-selected="true"][data-orientation="horizontal"] {
  color: #00478A;
  border-bottom: 2px solid;
  border-bottom-color: #00478A;
}

.c1:disabled {
  color: #A6A6A6;
  cursor: not-allowed;
}

<button
  aria-selected="true"
  class="poodle-box c0 poodle-tab c1 hello c2"
  data-orientation="horizontal"
  id="id"
  role="tab"
  tabindex="0"
>
  Tab
</button>
`;
